# plutus-tx-js

./: README.md  hie.yaml  plutus-tx-js.cabal
src/: PlutusTx.hs
src/PlutusTx/: Builtins.hs  Eq.hs  List.hs  Prelude.hs  Ratio.hs
src/PlutusTx/Builtins/: Class.hs  Internal.hs
