cabal-version:      3.0

name:               plutus-tx-js
version:            0.1.0.0

maintainer:         encoins.crypto@ud.me

-- Plutus language settings
common lang
  default-language:   Haskell2010
  default-extensions:
    NoImplicitPrelude
    DeriveFoldable
    DeriveFunctor
    DeriveGeneric
    DeriveLift
    DeriveTraversable
    ExplicitForAll
    GeneralizedNewtypeDeriving
    ScopedTypeVariables
    StandaloneDeriving

  -- See Plutus Tx readme for why we need the following flags:
  -- -fobject-code -fno-ignore-interface-pragmas and -fno-omit-interface-pragmas
  ghc-options:
    -Wall -Wnoncanonical-monad-instances -Wincomplete-uni-patterns
    -Wincomplete-record-updates -Wredundant-constraints -Widentities
    -fno-ignore-interface-pragmas -fno-omit-interface-pragmas -fobject-code

library
    import: lang
    exposed-modules:
      PlutusTx
      PlutusTx.Applicative
      PlutusTx.Base
      PlutusTx.Bool
      PlutusTx.Builtins
      PlutusTx.Builtins.Class
      PlutusTx.Builtins.Internal
      PlutusTx.Either
      PlutusTx.Enum
      PlutusTx.Eq
      PlutusTx.Foldable
      PlutusTx.Functor
      PlutusTx.Integer
      PlutusTx.Lattice
      PlutusTx.List
      PlutusTx.Maybe
      PlutusTx.Monoid
      PlutusTx.Numeric
      PlutusTx.Ord
      PlutusTx.Prelude
      PlutusTx.Ratio
      PlutusTx.Semigroup
      PlutusTx.Sqrt
      PlutusTx.These
      PlutusTx.Traversable
      PlutusTx.Utils
    build-depends:
      base                          >= 4.9 && < 5,
      base16-bytestring                      -any,
      base64                                 -any,
      aeson                                  -any,
      bytestring                             -any,
      cborg                                  -any,
      containers                             -any,
      data-default                           -any,
      deepseq                                -any,
      directory                              -any,
      extra                                  -any,
      file-embed                             -any,
      freer-simple                           -any,
      flat                                   -any,
      generic-arbitrary                      -any,
      ghc-prim                               -any,
      lens                                   -any,
      memory                                 -any,
      mtl                                    -any,
      openapi3                               -any,
      optparse-applicative                   -any,
      prettyprinter                          -any,
      QuickCheck                             -any,
      random                                 -any,
      text                                   -any

    hs-source-dirs: src